# BlueTriage

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_events.json
src/bluetriage/: cli.py  models.py  normalize.py  scanner.py
src/bluetriage/report/: render.py
src/bluetriage/report/templates/: report.html.j2
src/bluetriage/rules/: builtin_rules.py
tests/: test_rules.py
