[project]
name = "bluetriage"
version = "0.1.0"
description = "Windows log triage: normalize, detect, report."
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.0",
  "jinja2>=3.1",
]

[project.scripts]
bluetriage = "bluetriage.cli:app"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
